[FLINK-40355][table] improved docs clarity, improved hotpath + other small issues